--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MunMaeng"
         android:usesCleartextTraffic="true">
-
+        <activity
+            android:name=".QuizActivity"
+            android:exported="true" />
         <activity
             android:name=".NovActivity"
             android:exported="true" />
